# BaseDefense

./: .gitignore  .gitmodules  CMakeLists.txt  info.txt  old_CMakeLists.txt  out_resources_update.bat  update_dist.bat
resources/levels/: levels.json
resources/shaders/: rectangle.vert  selector.frag  selector.vert  text.frag  text.vert
resources/ui/: credits_anims.json  game_over_anims.json  levels_display.xml  levels_display_anims.json  lose.xml  main_menu.xml  main_menu_anims.json  pause_menu.xml  play.xml  play_anims.json  settings.xml  store.xml  store_anims.json
src/: camera.cpp  camera.h  constants.h  globals.h  init.cpp  init.h  main.cpp  scene_manager.cpp  scene_manger.h  update.cpp  update.h  window.cpp  window.h
src/animation/: animation.cpp  animation.h
src/audio/: audio.cpp
src/gameobjects/: bck.cpp  gos.cpp  gos.h
src/gameplay/: bck.cpp  bck.h  enemies.cpp  enemies.h  go_helper.h  gos.cpp  gos.h  gos_globals.cpp  gos_globals.h  preview_manager.cpp  preview_manager.h  store.cpp  store.h
src/gfx/: quad.cpp  quad.h  renderer.cpp  renderer.h
src/gfx/gfx_data/: buffers.cpp  buffers.h  object_data.cpp  object_data.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex.cpp  vertex.h
src/physics/: physics.cpp  physics.h
src/transform/: transform.cpp  transform.h
src/ui/: ui.cpp  ui.h  ui_elements.cpp  ui_elements.h  ui_hash.cpp  ui_hash.h  ui_layout.cpp  ui_layout.h  ui_rendering.cpp  ui_rendering.h  xml.c  xml.h
src/utils/: general.cpp  general.h  io.cpp  io.h  json.cpp  json.h  time.cpp  time.h
tests/: ui_nav_test.py
